Add user and authentication router
Split users Routes to auth and user routers.
Add controllers for both endpoints
Add export file for routers
